@@ -1,3 +1,8 @@
+Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>
+
+        * ctree.c, ctree.h, prefs.c: bugfix: redraw columns when
+          changing column visibility.
+
 Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
